--- a/notesandreminders.client/src/index.html
+++ b/notesandreminders.client/src/index.html
@@ -5,9 +5,34 @@
   <title>NotesandremindersClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body>  
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="app-tab" data-bs-toggle="tab" data-bs-target="#app" type="button" role="tab" aria-controls="app" aria-selected="true">Погода</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="false">Заметки</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="tage-tab" data-bs-toggle="tab" data-bs-target="#tage" type="button" role="tab" aria-controls="tage" aria-selected="false">Тэги</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="reminder-tab" data-bs-toggle="tab" data-bs-target="#reminder" type="button" role="tab" aria-controls="reminder" aria-selected="false">Напоминания</button>
+    </li>
+  </ul>
+  <!-- Nav tabs -->
+  <!-- Tabs content -->
+  <div class="tab-content" id="myTabContent">    
+    <div class="tab-pane fade show active" id="app"      role="tabpanel" aria-labelledby="app-tab"><app-root></app-root></div>
+    <div class="tab-pane fade"             id="note"     role="tabpanel" aria-labelledby="note-tab"><app-note>...</app-note></div>
+    <div class="tab-pane fade"             id="tage"     role="tabpanel" aria-labelledby="tage-tab"><tage>...</tage></div>
+    <div class="tab-pane fade"             id="reminder" role="tabpanel" aria-labelledby="reminder-tab">...</div>
+  </div>
+  <!-- Tabs content -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
