Добавил репозитории и интерфейс для Tage, добавил модуль Tage в ангуляр

--- a/notesandreminders.client/src/index.html
+++ b/notesandreminders.client/src/index.html
@@ -29,7 +29,7 @@
   <div class="tab-content" id="myTabContent">    
     <div class="tab-pane fade show active" id="app"      role="tabpanel" aria-labelledby="app-tab"><app-root></app-root></div>
     <div class="tab-pane fade"             id="note"     role="tabpanel" aria-labelledby="note-tab"><app-note>...</app-note></div>
-    <div class="tab-pane fade"             id="tage"     role="tabpanel" aria-labelledby="tage-tab"><tage>...</tage></div>
+    <div class="tab-pane fade"             id="tage"     role="tabpanel" aria-labelledby="tage-tab"><app-tage>...</app-tage></div>
     <div class="tab-pane fade"             id="reminder" role="tabpanel" aria-labelledby="reminder-tab">...</div>
   </div>
   <!-- Tabs content -->
