--- a/notesandreminders.client/src/index.html
+++ b/notesandreminders.client/src/index.html
@@ -11,11 +11,11 @@
 <body>  
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
+    <!--<li class="nav-item" role="presentation">
       <button class="nav-link active" id="app-tab" data-bs-toggle="tab" data-bs-target="#app" type="button" role="tab" aria-controls="app" aria-selected="true">Погода</button>
-    </li>
+    </li>-->
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="false">Заметки</button>
+      <button class="nav-link" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="true">Заметки</button>
     </li>
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="tage-tab" data-bs-toggle="tab" data-bs-target="#tage" type="button" role="tab" aria-controls="tage" aria-selected="false">Тэги</button>
@@ -27,8 +27,8 @@
   <!-- Nav tabs -->
   <!-- Tabs content -->
   <div class="tab-content" id="myTabContent">    
-    <div class="tab-pane fade show active" id="app"      role="tabpanel" aria-labelledby="app-tab"><app-root></app-root></div>
-    <div class="tab-pane fade"             id="note"     role="tabpanel" aria-labelledby="note-tab"><app-note>...</app-note></div>
+    <!--<div class="tab-pane fade show active" id="app"      role="tabpanel" aria-labelledby="app-tab"><app-root></app-root></div>-->
+    <div class="tab-pane fade fade show active"             id="note"     role="tabpanel" aria-labelledby="note-tab"><app-note>...</app-note></div>
     <div class="tab-pane fade"             id="tage"     role="tabpanel" aria-labelledby="tage-tab"><app-tage>...</app-tage></div>
     <div class="tab-pane fade"             id="reminder" role="tabpanel" aria-labelledby="reminder-tab">...</div>
   </div>
