--- a/notesandreminders.client/src/index.html
+++ b/notesandreminders.client/src/index.html
@@ -10,10 +10,7 @@
 </head>
 <body>  
   <!-- Nav tabs -->
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <!--<li class="nav-item" role="presentation">
-      <button class="nav-link active" id="app-tab" data-bs-toggle="tab" data-bs-target="#app" type="button" role="tab" aria-controls="app" aria-selected="true">Погода</button>
-    </li>-->
+  <ul class="nav nav-tabs" id="myTab" role="tablist">    
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="true">Заметки</button>
     </li>
@@ -27,10 +24,9 @@
   <!-- Nav tabs -->
   <!-- Tabs content -->
   <div class="tab-content" id="myTabContent">    
-    <!--<div class="tab-pane fade show active" id="app"      role="tabpanel" aria-labelledby="app-tab"><app-root></app-root></div>-->
-    <div class="tab-pane fade fade show active"             id="note"     role="tabpanel" aria-labelledby="note-tab"><app-note>...</app-note></div>
-    <div class="tab-pane fade"             id="tage"     role="tabpanel" aria-labelledby="tage-tab"><app-tage>...</app-tage></div>
-    <div class="tab-pane fade"             id="reminder" role="tabpanel" aria-labelledby="reminder-tab">...</div>
+    <div class="tab-pane fade show active" id="note"     role="tabpanel" aria-labelledby="note-tab">     <app-note>...</app-note>        </div>
+    <div class="tab-pane fade"             id="tage"     role="tabpanel" aria-labelledby="tage-tab">     <app-tage>...</app-tage>        </div>
+    <div class="tab-pane fade"             id="reminder" role="tabpanel" aria-labelledby="reminder-tab"> <app-reminder>...</app-reminder></div>
   </div>
   <!-- Tabs content -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
