--- a/notesandreminders.client/src/index.html
+++ b/notesandreminders.client/src/index.html
@@ -6,11 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="node_modules/angularjs-bootstrap-datetimepicker/src/css/datetimepicker.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>  
+<body>
   <!-- Nav tabs -->
-  <ul class="nav nav-tabs" id="myTab" role="tablist">    
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="true">Заметки</button>
     </li>
@@ -23,12 +24,13 @@
   </ul>
   <!-- Nav tabs -->
   <!-- Tabs content -->
-  <div class="tab-content" id="myTabContent">    
-    <div class="tab-pane fade show active" id="note"     role="tabpanel" aria-labelledby="note-tab">     <app-note>...</app-note>        </div>
-    <div class="tab-pane fade"             id="tage"     role="tabpanel" aria-labelledby="tage-tab">     <app-tage>...</app-tage>        </div>
-    <div class="tab-pane fade"             id="reminder" role="tabpanel" aria-labelledby="reminder-tab"> <app-reminder>...</app-reminder></div>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="note" role="tabpanel" aria-labelledby="note-tab">     <app-note>...</app-note>        </div>
+    <div class="tab-pane fade" id="tage" role="tabpanel" aria-labelledby="tage-tab">     <app-tage>...</app-tage>        </div>
+    <div class="tab-pane fade" id="reminder" role="tabpanel" aria-labelledby="reminder-tab"> <app-reminder>...</app-reminder></div>
   </div>
   <!-- Tabs content -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
 </body>
 </html>
