--- a/notesandreminders.client/src/index.html
+++ b/notesandreminders.client/src/index.html
@@ -14,7 +14,7 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="true">Заметки</button>
+      <button class="nav-link active" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="true">Заметки</button>
     </li>
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="tage-tab" data-bs-toggle="tab" data-bs-target="#tage" type="button" role="tab" aria-controls="tage" aria-selected="false">Тэги</button>
