--- a/notesandreminders.client/src/index.html
+++ b/notesandreminders.client/src/index.html
@@ -9,27 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>Напоминания и заметки</h1>
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="true">Заметки</button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="tage-tab" data-bs-toggle="tab" data-bs-target="#tage" type="button" role="tab" aria-controls="tage" aria-selected="false">Тэги</button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="reminder-tab" data-bs-toggle="tab" data-bs-target="#reminder" type="button" role="tab" aria-controls="reminder" aria-selected="false">Напоминания</button>
-    </li>
-  </ul>
-  <!-- Nav tabs -->
-  <!-- Tabs content -->
-  <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="note" role="tabpanel" aria-labelledby="note-tab">     <app-note>...</app-note>        </div>
-    <div class="tab-pane fade" id="tage" role="tabpanel" aria-labelledby="tage-tab">     <app-tage>...</app-tage>        </div>
-    <div class="tab-pane fade" id="reminder" role="tabpanel" aria-labelledby="reminder-tab"> <app-reminder>...</app-reminder></div>
-  </div>
-  <!-- Tabs content -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
+    <app-root></app-root>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
